# linked-lists

./: README.md
c/: CMakeLists.txt  autotest
c/benchmarks/: bench_helpers.cpp  benchmarks.cpp
c/include/: bench_helpers.h  list.h
c/spec/: list_spec.cpp
c/src/: list.c  main.c  main.cpp
cpp/: CMakeLists.txt  autotest
cpp/include/: list.h
cpp/spec/: list_spec.cpp
cpp/src/: list.cpp
python/: Makefile  Pipfile  main.py  warmup.py
python/lib/: list.py
python/lib/test/: test_list.py
